building out a testing jekyll site area added pages and post templates as well as a couple of test includes

--- a/_layouts/defaults.html
+++ b/_layouts/defaults.html
@@ -16,11 +16,19 @@
     <nav role="navigation">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/portfolio/">Portfolio</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
+        <li><a href="/portfolio">Portfolio</a></li>
       </ul>
     </nav>
+
+    <ul class="postIndex">
+      {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+      {% endfor %}
+    </ul>
 
     {{ content }}
 
