--- a/css/styles.scss
+++ b/css/styles.scss
@@ -32,11 +32,12 @@ a:hover {
   background: rgba(255, 255, 255, 0.4);
 }
 header {
-  padding: 0 10px;
+  padding: 30px;
   overflow: hidden;
 }
 h1 {
   margin: 0;
+  clear: both;
 }
 
 nav ul, ul.entries {
@@ -77,5 +78,57 @@ ul.entries a:hover {
 
 footer {
   font-size: 0.65em;
+  text-align: center;
+}
+
+//-------------------------------------//
+//---------Custom Styling--------------//
+//-------------------------------------//
+
+.testBox {
+  display: block;
+  height: 100px;
+  width: 400px;
+  color: #fff;
+  background: orange;
+  margin: 10px auto;
+  h1 {
+    // line-height: 100px;
+    padding-top: 15px;
+    margin: 0 auto;
+    width: 300px;
+  }
+}
+
+.pretendBanner {
+  display: block;
+  width: 100%;
+  height: 80px;
+  background: blue;
+  color: #fff;
+  margin: 30px 0;
+  h4 {
+    text-transform: uppercase;
+    font-size: 14px;
+    width: 80%;
+    line-height: 80px;
+    margin: 0 auto;
+  }
+}
+
+.postIndex {
+  float: right;
+  text-decoration: none;
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+}
+
+.pageTitle {
+  display: block;
+  width: 100%;
+  background: blue;
+  color: #fff;
+  margin: 20px 0;
   text-align: center;
 }
