--- a/_layouts/defaults.html
+++ b/_layouts/defaults.html
@@ -19,6 +19,7 @@
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
         <li><a href="/portfolio">Portfolio</a></li>
+        <li><a href="/affiliates/beyond-the-scores">BTS</a></li>
       </ul>
     </nav>
 
